--- a/prueba-tecnica/src/app/components/navbar/navbar.component.html
+++ b/prueba-tecnica/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,10 @@
     <mat-sidenav-container style="height: 100vh; width: 100vw;">
         <mat-sidenav #snav [mode]="isMobile() ? 'over': 'side'" [fixedInViewport]="isMobile()" fixedTopGap="56">
             <mat-nav-list>
-                <a mat-list-item routerLink="/tasks">Tasks</a>
+                <a mat-list-item routerLink="/productos">Productos</a>
+            </mat-nav-list>
+            <mat-nav-list>
+                <a mat-list-item (click)="handleLogout()">Logout</a>
             </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content>
