--- a/prueba-tecnica/src/app/components/product/list/list.component.html
+++ b/prueba-tecnica/src/app/components/product/list/list.component.html
@@ -1,5 +1,5 @@
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource()" class="mat-elevation-z8">
 
   <ng-container matColumnDef="nombre">
     <th mat-header-cell *matHeaderCellDef> Nombre </th>
