--- a/prueba-tecnica/src/app/components/product/product.component.html
+++ b/prueba-tecnica/src/app/components/product/product.component.html
@@ -1,4 +1,5 @@
 <h1 style = "text-align: center;">Productos</h1>
 <div class="container">
-    <app-list></app-list>
+    <app-add-producto (updateList)="getProducts()" ></app-add-producto>
+    <app-list [dataSource]="dataSource" ></app-list>
 </div>
