--- a/prueba-tecnica/src/app/components/product/list/list.component.html
+++ b/prueba-tecnica/src/app/components/product/list/list.component.html
@@ -31,7 +31,9 @@
 
   <ng-container matColumnDef="acciones">
     <th mat-header-cell *matHeaderCellDef> Acciones </th>
-    <td mat-cell *matCellDef="let element">  </td>
+    <td mat-cell *matCellDef="let element"> 
+      <app-add-producto [producto]="element" (updateList)="getProducts()" ></app-add-producto>
+       </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
