--- a/prueba-tecnica/src/app/components/product/delete-product/delete-product.component.html
+++ b/prueba-tecnica/src/app/components/product/delete-product/delete-product.component.html
@@ -1,1 +1,3 @@
-<p>delete-product works!</p>
+<button mat-mini-fab aria-label="Edit Task" (click)="openDialog()">
+    <mat-icon>delete</mat-icon>
+</button>
