--- a/prueba-tecnica/src/app/components/product/list/list.component.html
+++ b/prueba-tecnica/src/app/components/product/list/list.component.html
@@ -26,14 +26,15 @@
 
   <ng-container matColumnDef="precio">
     <th mat-header-cell *matHeaderCellDef> Precio </th>
-    <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.precio | currency }} </td>
   </ng-container>
 
   <ng-container matColumnDef="acciones">
     <th mat-header-cell *matHeaderCellDef> Acciones </th>
-    <td mat-cell *matCellDef="let element"> 
-      <app-add-producto [producto]="element" (updateList)="getProducts()" ></app-add-producto>
-       </td>
+    <td mat-cell *matCellDef="let element" style="width: 200px;"> 
+      <app-add-producto [producto]="element" (updateList)="getProducts()" style="margin-right:10px;"></app-add-producto>
+      <app-delete-product [producto]="element" (updateList)="getProducts()"></app-delete-product>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
